removed placehold.it

--- a/documentation/index.html
+++ b/documentation/index.html
@@ -119,7 +119,7 @@
 
                                     </p>
                                     <p>
-                                        The image has used at live demo is not available with download package. That means you will get "<code>http://placehold.it/</code>"  image instead of live demo image. Just need to replace place holder image with your own image. Be careful about the image path of  html and css file. If you find any type of difficulties with image or  want to get any live demo image, just contact with us by the mail <a href="mailto:logichunt.info@gmail.com">logichunt.info@gmail.com</a>.
+                                        The image has used at live demo is not available with download package. That means you will get "<code>"  image instead of live demo image. Just need to replace place holder image with your own image. Be careful about the image path of  html and css file. If you find any type of difficulties with image or  want to get any live demo image, just contact with us by the mail <a href="mailto:logichunt.info@gmail.com">logichunt.info@gmail.com</a>.
                                     </p>
                                 </div>
 
