--- a/schedules/index.html
+++ b/schedules/index.html
@@ -249,7 +249,7 @@
                                                         <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                                                             <div class="lgx-single-schedule">
                                                                 <div class="author">
-                                                                    <img src="http://placehold.it/800x800" alt="Speaker"/>
+                                                                    <img src="" alt="Speaker"/>
                                                                 </div>
                                                                 <div class="schedule-info">
                                                                     <h4 class="time">09:00 <span>Am</span> - 10.30 <span>Am</span></h4>
@@ -275,7 +275,7 @@
                                                         <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo">
                                                             <div class="lgx-single-schedule">
                                                                 <div class="author">
-                                                                    <img src="http://placehold.it/800x800" alt="Speaker"/>
+                                                                    <img src="" alt="Speaker"/>
                                                                 </div>
                                                                 <div class="schedule-info">
                                                                     <h4 class="time">10:30 <span>Am</span> - 11.30 <span>Am</span></h4>
@@ -301,10 +301,10 @@
                                                         <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="true" aria-controls="collapseThree">
                                                             <div class="lgx-single-schedule">
                                                                 <div class="author author-multi">
-                                                                    <img src="http://placehold.it/800x800" alt="Speaker"/>
-                                                                    <img src="http://placehold.it/800x800" alt="Speaker"/>
-                                                                    <img src="http://placehold.it/800x800" alt="Speaker"/>
-                                                                    <img src="http://placehold.it/800x800" alt="Speaker"/>
+                                                                    <img src="" alt="Speaker"/>
+                                                                    <img src="" alt="Speaker"/>
+                                                                    <img src="" alt="Speaker"/>
+                                                                    <img src="" alt="Speaker"/>
                                                                 </div>
                                                                 <div class="schedule-info">
                                                                     <h4 class="time">11:30 <span>Am</span> - 01.30 <span>Pm</span></h4>
@@ -330,7 +330,7 @@
                                                         <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapsefour" aria-expanded="true" aria-controls="collapsefour">
                                                             <div class="lgx-single-schedule">
                                                                 <div class="author">
-                                                                    <img src="http://placehold.it/800x800" alt="Speaker"/>
+                                                                    <img src="" alt="Speaker"/>
                                                                 </div>
                                                                 <div class="schedule-info">
                                                                     <h4 class="time">02:00 <span>Am</span> - 03.30 <span>Pm</span></h4>
@@ -356,7 +356,7 @@
                                                         <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapsefive" aria-expanded="true" aria-controls="collapsefive">
                                                             <div class="lgx-single-schedule">
                                                                 <div class="author">
-                                                                    <img src="http://placehold.it/800x800" alt="Speaker"/>
+                                                                    <img src="" alt="Speaker"/>
                                                                 </div>
                                                                 <div class="schedule-info">
                                                                     <h4 class="time">03:45 <span>Am</span> - 04.00 <span>Pm</span></h4>
@@ -390,9 +390,9 @@
                                                         <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion2" href="#collapseOne2" aria-expanded="true" aria-controls="collapseOne2">
                                                             <div class="lgx-single-schedule">
                                                                 <div class="author author-multi">
-                                                                    <img src="http://placehold.it/800x800" alt="Speaker"/>
-                                                                    <img src="http://placehold.it/800x800" alt="Speaker"/>
-                                                                    <img src="http://placehold.it/800x800" alt="Speaker"/>
+                                                                    <img src="" alt="Speaker"/>
+                                                                    <img src="" alt="Speaker"/>
+                                                                    <img src="" alt="Speaker"/>
                                                                 </div>
                                                                 <div class="schedule-info">
                                                                     <h4 class="time">09:00 <span>Am</span> - 10.30 <span>Am</span></h4>
@@ -418,7 +418,7 @@
                                                         <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion2" href="#collapseTwo2" aria-expanded="true" aria-controls="collapseTwo2">
                                                             <div class="lgx-single-schedule">
                                                                 <div class="author">
-                                                                    <img src="http://placehold.it/800x800" alt="Speaker"/>
+                                                                    <img src="" alt="Speaker"/>
                                                                 </div>
                                                                 <div class="schedule-info">
                                                                     <h4 class="time">09:00 <span>Am</span> - 10.30 <span>Am</span></h4>
@@ -444,7 +444,7 @@
                                                         <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion2" href="#collapseThree2" aria-expanded="true" aria-controls="collapseThree2">
                                                             <div class="lgx-single-schedule">
                                                                 <div class="author">
-                                                                    <img src="http://placehold.it/800x800" alt="Speaker"/>
+                                                                    <img src="" alt="Speaker"/>
                                                                 </div>
                                                                 <div class="schedule-info">
                                                                     <h4 class="time">09:00 <span>Am</span> - 10.30 <span>Am</span></h4>
@@ -478,7 +478,7 @@
                                                         <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion3" href="#collapseOne3" aria-expanded="true" aria-controls="collapseOne3">
                                                             <div class="lgx-single-schedule">
                                                                 <div class="author">
-                                                                    <img src="http://placehold.it/800x800" alt="Speaker"/>
+                                                                    <img src="" alt="Speaker"/>
                                                                 </div>
                                                                 <div class="schedule-info">
                                                                     <h4 class="time">09:00 <span>Am</span> - 10.30 <span>Am</span></h4>
@@ -504,7 +504,7 @@
                                                         <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion3" href="#collapseTwo3" aria-expanded="true" aria-controls="collapseTwo3">
                                                             <div class="lgx-single-schedule">
                                                                 <div class="author">
-                                                                    <img src="http://placehold.it/800x800" alt="Speaker"/>
+                                                                    <img src="" alt="Speaker"/>
                                                                 </div>
                                                                 <div class="schedule-info">
                                                                     <h4 class="time">09:00 <span>Am</span> - 10.30 <span>Am</span></h4>
@@ -530,7 +530,7 @@
                                                         <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion3" href="#collapseThree3" aria-expanded="true" aria-controls="collapseThree3">
                                                             <div class="lgx-single-schedule">
                                                                 <div class="author">
-                                                                    <img src="http://placehold.it/800x800" alt="Speaker"/>
+                                                                    <img src="" alt="Speaker"/>
                                                                 </div>
                                                                 <div class="schedule-info">
                                                                     <h4 class="time">09:00 <span>Am</span> - 10.30 <span>Am</span></h4>
@@ -564,7 +564,7 @@
                                                         <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion4" href="#collapseOne4" aria-expanded="true" aria-controls="collapseOne4">
                                                             <div class="lgx-single-schedule">
                                                                 <div class="author">
-                                                                    <img src="http://placehold.it/800x800" alt="Speaker"/>
+                                                                    <img src="" alt="Speaker"/>
                                                                 </div>
                                                                 <div class="schedule-info">
                                                                     <h4 class="time">09:00 <span>Am</span> - 10.30 <span>Am</span></h4>
@@ -590,7 +590,7 @@
                                                         <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion4" href="#collapseTwo4" aria-expanded="true" aria-controls="collapseTwo4">
                                                             <div class="lgx-single-schedule">
                                                                 <div class="author">
-                                                                    <img src="http://placehold.it/800x800" alt="Speaker"/>
+                                                                    <img src="" alt="Speaker"/>
                                                                 </div>
                                                                 <div class="schedule-info">
                                                                     <h4 class="time">09:00 <span>Am</span> - 10.30 <span>Am</span></h4>
@@ -616,7 +616,7 @@
                                                         <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion4" href="#collapseThree4" aria-expanded="true" aria-controls="collapseThree4">
                                                             <div class="lgx-single-schedule">
                                                                 <div class="author">
-                                                                    <img src="http://placehold.it/800x800" alt="Speaker"/>
+                                                                    <img src="" alt="Speaker"/>
                                                                 </div>
                                                                 <div class="schedule-info">
                                                                     <h4 class="time">09:00 <span>Am</span> - 10.30 <span>Am</span></h4>
