--- a/speakers/index.html
+++ b/speakers/index.html
@@ -232,7 +232,7 @@
                         <div class="col-xs-12 col-sm-6 col-md-4">
                             <div class="lgx-single-speaker">
                                 <figure>
-                                    <a class="profile-img" href="speakers.html"><img src="http://placehold.it/800x860" alt="Speaker"/></a>
+                                    <a class="profile-img" href="speakers.html"><img src="" alt="Speaker"/></a>
                                     <figcaption>
                                         <div class="social-group">
                                             <a class="sp-tw" href="#"><i class="fa fa-twitter"></i></a>
@@ -251,7 +251,7 @@
                         <div class="col-xs-12 col-sm-6 col-md-4">
                             <div class="lgx-single-speaker">
                                 <figure>
-                                    <a class="profile-img" href="speakers.html"><img src="http://placehold.it/800x860" alt="Speaker"/></a>
+                                    <a class="profile-img" href="speakers.html"><img src="" alt="Speaker"/></a>
                                     <figcaption>
                                         <div class="social-group">
                                             <a class="sp-tw" href="#"><i class="fa fa-twitter"></i></a>
@@ -270,7 +270,7 @@
                         <div class="col-xs-12 col-sm-6 col-md-4">
                             <div class="lgx-single-speaker">
                                 <figure>
-                                    <a class="profile-img" href="speakers.html"><img src="http://placehold.it/800x860" alt="Speaker"/></a>
+                                    <a class="profile-img" href="speakers.html"><img src="" alt="Speaker"/></a>
                                     <figcaption>
                                         <div class="social-group">
                                             <a class="sp-tw" href="#"><i class="fa fa-twitter"></i></a>
@@ -292,7 +292,7 @@
                         <div class="col-xs-12 col-sm-6 col-md-4">
                             <div class="lgx-single-speaker2 lgx-single-speaker3">
                                 <figure>
-                                    <a class="profile-img" href="speakers.html"><img src="http://placehold.it/800x860" alt="Speaker"/></a>
+                                    <a class="profile-img" href="speakers.html"><img src="" alt="Speaker"/></a>
                                     <figcaption>
                                         <div class="social-group">
                                             <a class="sp-tw" href="#"><i class="fa fa-twitter"></i></a>
@@ -311,7 +311,7 @@
                         <div class="col-xs-12 col-sm-6 col-md-4">
                             <div class="lgx-single-speaker2 lgx-single-speaker3">
                                 <figure>
-                                    <a class="profile-img" href="speakers.html"><img src="http://placehold.it/800x860" alt="Speaker"/></a>
+                                    <a class="profile-img" href="speakers.html"><img src="" alt="Speaker"/></a>
                                     <figcaption>
                                         <div class="social-group">
                                             <a class="sp-tw" href="#"><i class="fa fa-twitter"></i></a>
@@ -330,7 +330,7 @@
                         <div class="col-xs-12 col-sm-6 col-md-4">
                             <div class="lgx-single-speaker2 lgx-single-speaker3">
                                 <figure>
-                                    <a class="profile-img" href="speakers.html"><img src="http://placehold.it/800x860" alt="Speaker"/></a>
+                                    <a class="profile-img" href="speakers.html"><img src="" alt="Speaker"/></a>
                                     <figcaption>
                                         <div class="social-group">
                                             <a class="sp-tw" href="#"><i class="fa fa-twitter"></i></a>
@@ -353,7 +353,7 @@
                         <div class="col-xs-12 col-sm-6 col-md-4">
                             <div class="lgx-single-speaker2"> <!--lgx-single-speaker lgx-single-speaker2 lgx-single-speaker3-->
                                 <figure>
-                                    <a class="profile-img" href="speakers.html"><img src="http://placehold.it/800x860" alt="Speaker"/></a>
+                                    <a class="profile-img" href="speakers.html"><img src="" alt="Speaker"/></a>
                                     <figcaption>
                                         <div class="social-group">
                                             <a class="sp-tw" href="#"><i class="fa fa-twitter"></i></a>
@@ -372,7 +372,7 @@
                         <div class="col-xs-12 col-sm-6 col-md-4">
                             <div class="lgx-single-speaker2"> <!--lgx-single-speaker lgx-single-speaker2 lgx-single-speaker3-->
                                 <figure>
-                                    <a class="profile-img" href="speakers.html"><img src="http://placehold.it/800x860" alt="Speaker"/></a>
+                                    <a class="profile-img" href="speakers.html"><img src="" alt="Speaker"/></a>
                                     <figcaption>
                                         <div class="social-group">
                                             <a class="sp-tw" href="#"><i class="fa fa-twitter"></i></a>
@@ -391,7 +391,7 @@
                         <div class="col-xs-12 col-sm-6 col-md-4">
                             <div class="lgx-single-speaker2"> <!--lgx-single-speaker lgx-single-speaker2 lgx-single-speaker3-->
                                 <figure>
-                                    <a class="profile-img" href="speakers.html"><img src="http://placehold.it/800x860" alt="Speaker"/></a>
+                                    <a class="profile-img" href="speakers.html"><img src="" alt="Speaker"/></a>
                                     <figcaption>
                                         <div class="social-group">
                                             <a class="sp-tw" href="#"><i class="fa fa-twitter"></i></a>
@@ -415,7 +415,7 @@
                         <div class="col-xs-12">
                             <div class="lgx-col4 lgx-single-speaker2">
                                 <figure>
-                                    <a class="profile-img" href="speakers.html"><img src="http://placehold.it/800x860" alt="Speaker"/></a>
+                                    <a class="profile-img" href="speakers.html"><img src="" alt="Speaker"/></a>
                                     <figcaption>
                                         <div class="social-group">
                                             <a class="sp-tw" href="#"><i class="fa fa-twitter"></i></a>
@@ -432,7 +432,7 @@
                             </div>
                             <div class="lgx-col4 lgx-single-speaker2">
                                 <figure>
-                                    <a class="profile-img" href="speakers.html"><img src="http://placehold.it/800x860" alt="Speaker"/></a>
+                                    <a class="profile-img" href="speakers.html"><img src="" alt="Speaker"/></a>
                                     <figcaption>
                                         <div class="social-group">
                                             <a class="sp-tw" href="#"><i class="fa fa-twitter"></i></a>
@@ -449,7 +449,7 @@
                             </div>
                             <div class="lgx-col4 lgx-single-speaker2">
                                 <figure>
-                                    <a class="profile-img" href="speakers.html"><img src="http://placehold.it/800x860" alt="Speaker"/></a>
+                                    <a class="profile-img" href="speakers.html"><img src="" alt="Speaker"/></a>
                                     <figcaption>
                                         <div class="social-group">
                                             <a class="sp-tw" href="#"><i class="fa fa-twitter"></i></a>
@@ -466,7 +466,7 @@
                             </div>
                             <div class="lgx-col4 lgx-single-speaker2">
                                 <figure>
-                                    <a class="profile-img" href="speakers.html"><img src="http://placehold.it/800x860" alt="Speaker"/></a>
+                                    <a class="profile-img" href="speakers.html"><img src="" alt="Speaker"/></a>
                                     <figcaption>
                                         <div class="social-group">
                                             <a class="sp-tw" href="#"><i class="fa fa-twitter"></i></a>
@@ -489,7 +489,7 @@
                         <div class="col-xs-12">
                             <div class="lgx-col3 lgx-single-speaker2">
                                 <figure>
-                                    <a class="profile-img" href="speakers.html"><img src="http://placehold.it/800x860" alt="Speaker"/></a>
+                                    <a class="profile-img" href="speakers.html"><img src="" alt="Speaker"/></a>
                                     <figcaption>
                                         <div class="social-group">
                                             <a class="sp-tw" href="#"><i class="fa fa-twitter"></i></a>
@@ -506,7 +506,7 @@
                             </div>
                             <div class="lgx-col3 lgx-single-speaker2">
                                 <figure>
-                                    <a class="profile-img" href="speakers.html"><img src="http://placehold.it/800x860" alt="Speaker"/></a>
+                                    <a class="profile-img" href="speakers.html"><img src="" alt="Speaker"/></a>
                                     <figcaption>
                                         <div class="social-group">
                                             <a class="sp-tw" href="#"><i class="fa fa-twitter"></i></a>
@@ -523,7 +523,7 @@
                             </div>
                             <div class="lgx-col3 lgx-single-speaker2">
                                 <figure>
-                                    <a class="profile-img" href="speakers.html"><img src="http://placehold.it/800x860" alt="Speaker"/></a>
+                                    <a class="profile-img" href="speakers.html"><img src="" alt="Speaker"/></a>
                                     <figcaption>
                                         <div class="social-group">
                                             <a class="sp-tw" href="#"><i class="fa fa-twitter"></i></a>
@@ -546,7 +546,7 @@
                         <div class="col-xs-12">
                             <div class="lgx-col2 lgx-single-speaker2">
                                 <figure>
-                                    <a class="profile-img" href="speakers.html"><img src="http://placehold.it/800x860" alt="Speaker"/></a>
+                                    <a class="profile-img" href="speakers.html"><img src="" alt="Speaker"/></a>
                                     <figcaption>
                                         <div class="social-group">
                                             <a class="sp-tw" href="#"><i class="fa fa-twitter"></i></a>
@@ -563,7 +563,7 @@
                             </div>
                             <div class="lgx-col2 lgx-single-speaker2">
                                 <figure>
-                                    <a class="profile-img" href="speakers.html"><img src="http://placehold.it/800x860" alt="Speaker"/></a>
+                                    <a class="profile-img" href="speakers.html"><img src="" alt="Speaker"/></a>
                                     <figcaption>
                                         <div class="social-group">
                                             <a class="sp-tw" href="#"><i class="fa fa-twitter"></i></a>
@@ -589,7 +589,7 @@
                         <div class="col-xs-12">
                             <div class="lgx-col5 lgx-single-speaker2">
                                 <figure>
-                                    <a class="profile-img" href="speakers.html"><img src="http://placehold.it/800x860" alt="Speaker"/></a>
+                                    <a class="profile-img" href="speakers.html"><img src="" alt="Speaker"/></a>
                                     <figcaption>
                                         <div class="social-group">
                                             <a class="sp-tw" href="#"><i class="fa fa-twitter"></i></a>
@@ -606,7 +606,7 @@
                             </div>
                             <div class="lgx-col5 lgx-single-speaker2">
                                 <figure>
-                                    <a class="profile-img" href="speakers.html"><img src="http://placehold.it/800x860" alt="Speaker"/></a>
+                                    <a class="profile-img" href="speakers.html"><img src="" alt="Speaker"/></a>
                                     <figcaption>
                                         <div class="social-group">
                                             <a class="sp-tw" href="#"><i class="fa fa-twitter"></i></a>
@@ -623,7 +623,7 @@
                             </div>
                             <div class="lgx-col5 lgx-single-speaker2">
                                 <figure>
-                                    <a class="profile-img" href="speakers.html"><img src="http://placehold.it/800x860" alt="Speaker"/></a>
+                                    <a class="profile-img" href="speakers.html"><img src="" alt="Speaker"/></a>
                                     <figcaption>
                                         <div class="social-group">
                                             <a class="sp-tw" href="#"><i class="fa fa-twitter"></i></a>
@@ -640,7 +640,7 @@
                             </div>
                             <div class="lgx-col5 lgx-single-speaker2">
                                 <figure>
-                                    <a class="profile-img" href="speakers.html"><img src="http://placehold.it/800x860" alt="Speaker"/></a>
+                                    <a class="profile-img" href="speakers.html"><img src="" alt="Speaker"/></a>
                                     <figcaption>
                                         <div class="social-group">
                                             <a class="sp-tw" href="#"><i class="fa fa-twitter"></i></a>
@@ -657,7 +657,7 @@
                             </div>
                             <div class="lgx-col5 lgx-single-speaker2">
                                 <figure>
-                                    <a class="profile-img" href="speakers.html"><img src="http://placehold.it/800x860" alt="Speaker"/></a>
+                                    <a class="profile-img" href="speakers.html"><img src="" alt="Speaker"/></a>
                                     <figcaption>
                                         <div class="social-group">
                                             <a class="sp-tw" href="#"><i class="fa fa-twitter"></i></a>
@@ -679,7 +679,7 @@
                         <div class="col-xs-12">
                             <div class="lgx-col4 lgx-single-speaker">
                                 <figure>
-                                    <a class="profile-img" href="speakers.html"><img src="http://placehold.it/800x860" alt="Speaker"/></a>
+                                    <a class="profile-img" href="speakers.html"><img src="" alt="Speaker"/></a>
                                     <figcaption>
                                         <div class="social-group">
                                             <a class="sp-tw" href="#"><i class="fa fa-twitter"></i></a>
@@ -696,7 +696,7 @@
                             </div>
                             <div class="lgx-col4 lgx-single-speaker">
                                 <figure>
-                                    <a class="profile-img" href="speakers.html"><img src="http://placehold.it/800x860" alt="Speaker"/></a>
+                                    <a class="profile-img" href="speakers.html"><img src="" alt="Speaker"/></a>
                                     <figcaption>
                                         <div class="social-group">
                                             <a class="sp-tw" href="#"><i class="fa fa-twitter"></i></a>
@@ -713,7 +713,7 @@
                             </div>
                             <div class="lgx-col4 lgx-single-speaker">
                                 <figure>
-                                    <a class="profile-img" href="speakers.html"><img src="http://placehold.it/800x860" alt="Speaker"/></a>
+                                    <a class="profile-img" href="speakers.html"><img src="" alt="Speaker"/></a>
                                     <figcaption>
                                         <div class="social-group">
                                             <a class="sp-tw" href="#"><i class="fa fa-twitter"></i></a>
@@ -730,7 +730,7 @@
                             </div>
                             <div class="lgx-col4 lgx-single-speaker">
                                 <figure>
-                                    <a class="profile-img" href="speakers.html"><img src="http://placehold.it/800x860" alt="Speaker"/></a>
+                                    <a class="profile-img" href="speakers.html"><img src="" alt="Speaker"/></a>
                                     <figcaption>
                                         <div class="social-group">
                                             <a class="sp-tw" href="#"><i class="fa fa-twitter"></i></a>
@@ -752,7 +752,7 @@
                         <div class="col-xs-12">
                             <div class="lgx-col3 lgx-single-speaker2 lgx-single-speaker3">
                                 <figure>
-                                    <a class="profile-img" href="speakers.html"><img src="http://placehold.it/800x860" alt="Speaker"/></a>
+                                    <a class="profile-img" href="speakers.html"><img src="" alt="Speaker"/></a>
                                     <figcaption>
                                         <div class="social-group">
                                             <a class="sp-tw" href="#"><i class="fa fa-twitter"></i></a>
@@ -769,7 +769,7 @@
                             </div>
                             <div class="lgx-col3 lgx-single-speaker2 lgx-single-speaker3">
                                 <figure>
-                                    <a class="profile-img" href="speakers.html"><img src="http://placehold.it/800x860" alt="Speaker"/></a>
+                                    <a class="profile-img" href="speakers.html"><img src="" alt="Speaker"/></a>
                                     <figcaption>
                                         <div class="social-group">
                                             <a class="sp-tw" href="#"><i class="fa fa-twitter"></i></a>
@@ -786,7 +786,7 @@
                             </div>
                             <div class="lgx-col3 lgx-single-speaker2 lgx-single-speaker3">
                                 <figure>
-                                    <a class="profile-img" href="speakers.html"><img src="http://placehold.it/800x860" alt="Speaker"/></a>
+                                    <a class="profile-img" href="speakers.html"><img src="" alt="Speaker"/></a>
                                     <figcaption>
                                         <div class="social-group">
                                             <a class="sp-tw" href="#"><i class="fa fa-twitter"></i></a>
