--- a/sponsors/index.html
+++ b/sponsors/index.html
@@ -233,16 +233,16 @@
                             <h3 class="sponsored-heading first-heading">Gold Sponsors</h3>
                             <div class="sponsors-area">
                                 <div class="single">
-                                    <a class="" href="#"><img src="http://placehold.it/467x157" alt="sponsor"/></a>
+                                    <a class="" href="#"><img src="" alt="sponsor"/></a>
                                 </div>
                                 <div class="single">
-                                    <a class="" href="#"><img src="http://placehold.it/467x157" alt="sponsor"/></a>
+                                    <a class="" href="#"><img src="" alt="sponsor"/></a>
                                 </div>
                                 <div class="single">
-                                    <a class="" href="#"><img src="http://placehold.it/467x157" alt="sponsor"/></a>
+                                    <a class="" href="#"><img src="" alt="sponsor"/></a>
                                 </div>
                                 <div class="single">
-                                    <a class="" href="#"><img src="http://placehold.it/467x157" alt="sponsor"/></a>
+                                    <a class="" href="#"><img src="" alt="sponsor"/></a>
                                 </div>
                             </div>
                         </div>
@@ -254,25 +254,25 @@
                             <h3 class="sponsored-heading secound-heading">Silver Sponsors</h3>
                             <div class="sponsors-area">
                                 <div class="single">
-                                    <a class="" href="#"><img src="http://placehold.it/467x157" alt="sponsor"/></a>
+                                    <a class="" href="#"><img src="" alt="sponsor"/></a>
                                 </div>
                                 <div class="single">
-                                    <a class="" href="#"><img src="http://placehold.it/467x157" alt="sponsor"/></a>
+                                    <a class="" href="#"><img src="" alt="sponsor"/></a>
                                 </div>
                                 <div class="single">
-                                    <a class="" href="#"><img src="http://placehold.it/467x157" alt="sponsor"/></a>
+                                    <a class="" href="#"><img src="" alt="sponsor"/></a>
                                 </div>
                                 <div class="single">
-                                    <a class="" href="#"><img src="http://placehold.it/467x157" alt="sponsor"/></a>
+                                    <a class="" href="#"><img src="" alt="sponsor"/></a>
                                 </div>
                                 <div class="single">
-                                    <a class="" href="#"><img src="http://placehold.it/467x157" alt="sponsor"/></a>
+                                    <a class="" href="#"><img src="" alt="sponsor"/></a>
                                 </div>
                                 <div class="single">
-                                    <a class="" href="#"><img src="http://placehold.it/467x157" alt="sponsor"/></a>
+                                    <a class="" href="#"><img src="" alt="sponsor"/></a>
                                 </div>
                                 <div class="single">
-                                    <a class="" href="#"><img src="http://placehold.it/467x157" alt="sponsor"/></a>
+                                    <a class="" href="#"><img src="" alt="sponsor"/></a>
                                 </div>
                             </div>
                         </div>
@@ -283,13 +283,13 @@
                             <h3 class="sponsored-heading third-heading">Platinum Sponsors</h3>
                             <div class="sponsors-area">
                                 <div class="single">
-                                    <a class="" href="#"><img src="http://placehold.it/467x157" alt="sponsor"/></a>
+                                    <a class="" href="#"><img src="" alt="sponsor"/></a>
                                 </div>
                                 <div class="single">
-                                    <a class="" href="#"><img src="http://placehold.it/467x157" alt="sponsor"/></a>
+                                    <a class="" href="#"><img src="" alt="sponsor"/></a>
                                 </div>
                                 <div class="single">
-                                    <a class="" href="#"><img src="http://placehold.it/467x157" alt="sponsor"/></a>
+                                    <a class="" href="#"><img src="" alt="sponsor"/></a>
                                 </div>
                             </div>
                         </div>
@@ -302,22 +302,22 @@
                             <h3 class="sponsored-heading first-heading">Gold Sponsors</h3>
                             <div class="sponsors-area sponsors-area-bg">
                                 <div class="single">
-                                    <a class="" href="#"><img src="http://placehold.it/467x157" alt="sponsor"/></a>
+                                    <a class="" href="#"><img src="" alt="sponsor"/></a>
                                 </div>
                                 <div class="single">
-                                    <a class="" href="#"><img src="http://placehold.it/467x157" alt="sponsor"/></a>
+                                    <a class="" href="#"><img src="" alt="sponsor"/></a>
                                 </div>
                                 <div class="single">
-                                    <a class="" href="#"><img src="http://placehold.it/467x157" alt="sponsor"/></a>
+                                    <a class="" href="#"><img src="" alt="sponsor"/></a>
                                 </div>
                                 <div class="single">
-                                    <a class="" href="#"><img src="http://placehold.it/467x157" alt="sponsor"/></a>
+                                    <a class="" href="#"><img src="" alt="sponsor"/></a>
                                 </div>
                                 <div class="single">
-                                    <a class="" href="#"><img src="http://placehold.it/467x157" alt="sponsor"/></a>
+                                    <a class="" href="#"><img src="" alt="sponsor"/></a>
                                 </div>
                                 <div class="single">
-                                    <a class="" href="#"><img src="http://placehold.it/467x157" alt="sponsor"/></a>
+                                    <a class="" href="#"><img src="" alt="sponsor"/></a>
                                 </div>
                             </div>
                         </div>
@@ -329,13 +329,13 @@
                             <h3 class="sponsored-heading secound-heading">Silver Sponsors</h3>
                             <div class="sponsors-area sponsors-area-bg">
                                 <div class="single">
-                                    <a class="" href="#"><img src="http://placehold.it/467x157" alt="sponsor"/></a>
+                                    <a class="" href="#"><img src="" alt="sponsor"/></a>
                                 </div>
                                 <div class="single">
-                                    <a class="" href="#"><img src="http://placehold.it/467x157" alt="sponsor"/></a>
+                                    <a class="" href="#"><img src="" alt="sponsor"/></a>
                                 </div>
                                 <div class="single">
-                                    <a class="" href="#"><img src="http://placehold.it/467x157" alt="sponsor"/></a>
+                                    <a class="" href="#"><img src="" alt="sponsor"/></a>
                                 </div>
                             </div>
                         </div>
