--- a/about/index.html
+++ b/about/index.html
@@ -280,7 +280,7 @@
                                 <div class="col-xs-12 col-sm-6 col-md-4">
                                     <div class="lgx-single-speaker">
                                         <figure>
-                                            <a class="profile-img" href="speakers.html"><img src="http://placehold.it/800x860" alt="Speaker"/></a>
+                                            <a class="profile-img" href="speakers.html"><img src="" alt="Speaker"/></a>
                                             <figcaption>
                                                 <div class="social-group">
                                                     <a class="sp-tw" href="#"><i class="fa fa-twitter"></i></a>
@@ -299,7 +299,7 @@
                                 <div class="col-xs-12 col-sm-6 col-md-4">
                                     <div class="lgx-single-speaker">
                                         <figure>
-                                            <a class="profile-img" href="speakers.html"><img src="http://placehold.it/800x860" alt="Speaker"/></a>
+                                            <a class="profile-img" href="speakers.html"><img src="" alt="Speaker"/></a>
                                             <figcaption>
                                                 <div class="social-group">
                                                     <a class="sp-tw" href="#"><i class="fa fa-twitter"></i></a>
@@ -318,7 +318,7 @@
                                 <div class="col-xs-12 col-sm-6 col-md-4">
                                     <div class="lgx-single-speaker">
                                         <figure>
-                                            <a class="profile-img" href="speakers.html"><img src="http://placehold.it/800x860" alt="Speaker"/></a>
+                                            <a class="profile-img" href="speakers.html"><img src="" alt="Speaker"/></a>
                                             <figcaption>
                                                 <div class="social-group">
                                                     <a class="sp-tw" href="#"><i class="fa fa-twitter"></i></a>
@@ -337,7 +337,7 @@
                                 <div class="col-xs-12 col-sm-6 col-md-4">
                                     <div class="lgx-single-speaker">
                                         <figure>
-                                            <a class="profile-img" href="speakers.html"><img src="http://placehold.it/800x860" alt="Speaker"/></a>
+                                            <a class="profile-img" href="speakers.html"><img src="" alt="Speaker"/></a>
                                             <figcaption>
                                                 <div class="social-group">
                                                     <a class="sp-tw" href="#"><i class="fa fa-twitter"></i></a>
@@ -356,7 +356,7 @@
                                 <div class="col-xs-12 col-sm-6 col-md-4">
                                     <div class="lgx-single-speaker">
                                         <figure>
-                                            <a class="profile-img" href="speakers.html"><img src="http://placehold.it/800x860" alt="Speaker"/></a>
+                                            <a class="profile-img" href="speakers.html"><img src="" alt="Speaker"/></a>
                                             <figcaption>
                                                 <div class="social-group">
                                                     <a class="sp-tw" href="#"><i class="fa fa-twitter"></i></a>
@@ -375,7 +375,7 @@
                                 <div class="col-xs-12 col-sm-6 col-md-4">
                                     <div class="lgx-single-speaker">
                                         <figure>
-                                            <a class="profile-img" href="speakers.html"><img src="http://placehold.it/800x860" alt="Speaker"/></a>
+                                            <a class="profile-img" href="speakers.html"><img src="" alt="Speaker"/></a>
                                             <figcaption>
                                                 <div class="social-group">
                                                     <a class="sp-tw" href="#"><i class="fa fa-twitter"></i></a>
@@ -423,7 +423,7 @@
                                         <blockquote class="lgx-testi-single">
                                             <p><span>This is the best Restaurant in the world</span> Proin sodales dapibus magna, et porta leo convallis sed. Duis tincidunt libero ut neque mollis dignissim. Nullam ultricies sit amet quam non iaculis. Curabitur convallis nulla non nibh aliquet rhoncus. Donec at tempus felis.</p>
                                             <div class="author">
-                                                <img src="http://placehold.it/83x83" alt="author">
+                                                <img src="" alt="author">
                                                 <h4 class="title"><a href="#"></a>Jonathon Doe</h4>
                                                 <div class="rate">
                                                     <i class="fa fa-star active"></i>
@@ -440,7 +440,7 @@
                                         <blockquote class="lgx-testi-single">
                                             <p><span>This is the best Restaurant in the world</span> Proin sodales dapibus magna, et porta leo convallis sed. Duis tincidunt libero ut neque mollis dignissim. Nullam ultricies sit amet quam non iaculis. Curabitur convallis nulla non nibh aliquet rhoncus. Donec at tempus felis.</p>
                                             <div class="author">
-                                                <img src="http://placehold.it/83x83" alt="author">
+                                                <img src="" alt="author">
                                                 <h4 class="title"><a href="#"></a>Jonathon Doe</h4>
                                                 <div class="rate">
                                                     <i class="fa fa-star active"></i>
@@ -457,7 +457,7 @@
                                         <blockquote class="lgx-testi-single">
                                             <p><span>This is the best Restaurant in the world</span> Proin sodales dapibus magna, et porta leo convallis sed. Duis tincidunt libero ut neque mollis dignissim. Nullam ultricies sit amet quam non iaculis. Curabitur convallis nulla non nibh aliquet rhoncus. Donec at tempus felis.</p>
                                             <div class="author">
-                                                <img src="http://placehold.it/83x83" alt="author">
+                                                <img src="" alt="author">
                                                 <h4 class="title"><a href="#"></a>Jonathon Doe</h4>
                                                 <div class="rate">
                                                     <i class="fa fa-star active"></i>
